--- a/shop-service/src/main/resources/application.yml
+++ b/shop-service/src/main/resources/application.yml
@@ -11,5 +11,16 @@ spring:
     hibernate:
       ddl-auto: update
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
 server:
   port: 9050
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:9000/eureka
