--- a/worker-service/src/main/resources/application.yml
+++ b/worker-service/src/main/resources/application.yml
@@ -14,3 +14,17 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
+server:
+  port: 9070
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:9000/eureka
