--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -15,5 +15,16 @@ spring:
       hibernate:
         format_sql: true
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
 server:
   port: 9020
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:9000/eureka
