api-gateway: role-based security and some secret security establishment and accordingly other services' files change commit

--- a/worker-service/src/main/resources/application.yml
+++ b/worker-service/src/main/resources/application.yml
@@ -21,6 +21,9 @@ management:
       exposure:
         include: "*"
 
+secret:
+  key: ${SECRET_KEY}
+
 server:
   servlet:
     context-path: /workers
