--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -11,6 +11,7 @@ spring:
             - Method=GET,POST,PUT,DELETE
           filters:
             - StripPrefix=2
+            - name: AuthenticationFilter
         - id: order-service
           uri: lb://ORDER-SERVICE
           predicates:
@@ -18,6 +19,7 @@ spring:
             - Method=GET,POST,PUT,DELETE
           filters:
             - StripPrefix=2
+            - name: AuthenticationFilter
         - id: product-service
           uri: lb://PRODUCT-SERVICE
           predicates:
@@ -25,6 +27,7 @@ spring:
             - Method=GET,POST,PUT,DELETE
           filters:
             - StripPrefix=2
+            - name: AuthenticationFilter
         - id: sales-service
           uri: lb://SALES-SERVICE
           predicates:
@@ -32,6 +35,7 @@ spring:
             - Method=GET,POST,PUT,DELETE
           filters:
             - StripPrefix=2
+            - name: AuthenticationFilter
         - id: shop-service
           uri: lb://SHOP-SERVICE
           predicates:
@@ -39,6 +43,7 @@ spring:
             - Method=GET,POST,PUT,DELETE
           filters:
             - StripPrefix=2
+            - name: AuthenticationFilter
         - id: user-service
           uri: lb://USER-SERVICE
           predicates:
@@ -53,6 +58,7 @@ spring:
             - Method=GET,POST,PUT,DELETE
           filters:
             - StripPrefix=2
+            - name: AuthenticationFilter
 
 
 
@@ -64,3 +70,6 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:9000/eureka
+
+secret:
+  key: ${SECRET_KEY}
