secuirty aspect in all services commit

--- a/shop-service/src/main/resources/application.yml
+++ b/shop-service/src/main/resources/application.yml
@@ -17,6 +17,9 @@ management:
       exposure:
         include: "*"
 
+secret:
+  key: ${SECRET_KEY}
+
 server:
   servlet:
     context-path: /shops
