config server: added its project files, updated application.yml, added dependency of config client in pom.xml files of all the services commit

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,72 +1,5 @@
 spring:
   application:
     name: api-gateway
-  cloud:
-    gateway:
-      routes:
-        - id: customer-service
-          uri: lb://CUSTOMER-SERVICE
-          predicates:
-            - Path=/api/v1/customers/**
-            - Method=GET,POST,PUT,DELETE
-          filters:
-            - StripPrefix=2
-            - name: AuthenticationFilter
-        - id: order-service
-          uri: lb://ORDER-SERVICE
-          predicates:
-            - Path=/api/v1/orders/**
-            - Method=GET,POST,PUT,DELETE
-          filters:
-            - StripPrefix=2
-            - name: AuthenticationFilter
-        - id: product-service
-          uri: lb://PRODUCT-SERVICE
-          predicates:
-            - Path=/api/v1/products/**
-            - Method=GET,POST,PUT,DELETE
-          filters:
-            - StripPrefix=2
-            - name: AuthenticationFilter
-        - id: sales-service
-          uri: lb://SALES-SERVICE
-          predicates:
-            - Path=/api/v1/sales/**
-            - Method=GET,POST,PUT,DELETE
-          filters:
-            - StripPrefix=2
-            - name: AuthenticationFilter
-        - id: shop-service
-          uri: lb://SHOP-SERVICE
-          predicates:
-            - Path=/api/v1/shops/**
-            - Method=GET,POST,PUT,DELETE
-          filters:
-            - StripPrefix=2
-            - name: AuthenticationFilter
-        - id: user-service
-          uri: lb://USER-SERVICE
-          predicates:
-            - Path=/api/v1/users/**
-            - Method=GET,POST,PUT,DELETE
-          filters:
-            - StripPrefix=2
-        - id: worker-service
-          uri: lb://WORKER-SERVICE
-          predicates:
-            - Path=/api/v1/workers/**
-            - Method=GET,POST,PUT,DELETE
-          filters:
-            - StripPrefix=2
-            - name: AuthenticationFilter
-
-server:
-  port: 8090
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:9000/eureka
-
-secret:
-  key: ${SECRET_KEY}
+  config:
+    import: configserver:http://localhost:8060
