--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,25 +1,5 @@
 spring:
   application:
     name: user-service
-
-  datasource:
-    url: jdbc:postgresql://${DB_HOST_URL}/${DB_NAME}?useSSL=false
-    username:
-    password:
-
-  jpa:
-    hibernate:
-      ddl-auto: update
-
-server:
-  servlet:
-    context-path: /users
-  port: 9060
-
-secret:
-  key: ${SECRET_KEY}
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:9000/eureka
+  config:
+    import: configserver:http://localhost:8060
