--- a/worker-service/src/main/resources/application.yml
+++ b/worker-service/src/main/resources/application.yml
@@ -1,35 +1,5 @@
 spring:
   application:
     name: worker-service
-
-  datasource:
-    url: jdbc:postgresql://${DB_HOST_URL}/${DB_NAME}?useSSL=false
-    username:
-    password:
-
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
-
-secret:
-  key: ${SECRET_KEY}
-
-server:
-  servlet:
-    context-path: /workers
-  port: 9070
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:9000/eureka
+  config:
+    import: configserver:http://localhost:8060
